force-app/main/default/objects/Patient__c/fields/Cholesterol_Level__c.field-meta.xml
<CustomField>
    <fullName>Cholesterol_Level__c</fullName>
    <label>Cholesterol Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>