force-app/main/default/objects/Patient__c/fields/Family_History_of_Heart_Disease__c.field-meta.xml
<CustomField>
    <fullName>Family_History_of_Heart_Disease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family History of Heart Disease</label>
    <type>Checkbox</type>
</CustomField>