force-app/main/default/objects/Patient__c/fields/High_Health_Risk__c.field-meta.xml
<CustomField>
    <fullName>High_Health_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Health Risk</label>
    <type>Checkbox</type>
</CustomField>