force-app/main/default/objects/Patient__c/fields/Risk_Prediction_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Prediction_Score__c</fullName>
    <label>Risk Prediction Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>